--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["snuk182 <snuk188@gmail.com>"]
 
 [dependencies]
-nuklear-rust = {version = "*", features = ["rust_allocator"]}
-nuklear-backend-glium = { version = "*", path = "../nuklear-backend-glium"}
+nuklear-rust = {version = "^0.1", features = ["rust_allocator"]}
+nuklear-backend-glium = "^0.1"
 glium = "*"
 glutin = "*"
 image = "*"
